Do qtVectorPathForPath before starting thread pool

This avoids the race condition created by calling it the first time
inside the threads.

Fixes: QTBUG-76338
Fixes: QTBUG-76069
Change-Id: I6108526eb6f5b5ba9c3334437102fc5959f53030
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>